@@ -39,7 +39,6 @@ import de.tum.in.www1.artemis.exercise.fileupload.FileUploadExerciseFactory;
 import de.tum.in.www1.artemis.exercise.modeling.ModelingExerciseFactory;
 import de.tum.in.www1.artemis.exercise.text.TextExerciseFactory;
 import de.tum.in.www1.artemis.participation.ParticipationUtilService;
-import de.tum.in.www1.artemis.repository.CourseRepository;
 import de.tum.in.www1.artemis.repository.ExerciseRepository;
 import de.tum.in.www1.artemis.repository.ParticipationRepository;
 import de.tum.in.www1.artemis.repository.ResultRepository;
@@ -51,9 +50,6 @@ class AssessmentServiceTest extends AbstractSpringIntegrationIndependentTest {
 
     @Autowired
     private ExerciseRepository exerciseRepository;
-
-    @Autowired
-    private CourseRepository courseRepository;
 
     @Autowired
     private ResultRepository resultRepository;
@@ -326,7 +322,7 @@ class AssessmentServiceTest extends AbstractSpringIntegrationIndependentTest {
 
         Exam exam = examUtilService.addExam(course1, visibleDate, startDate, endDate);
         exam = examUtilService.addTextModelingProgrammingExercisesToExam(exam, false, false);
-        var exercise = exam.getExerciseGroups().get(0).getExercises().iterator().next();
+        var exercise = exam.getExerciseGroups().getFirst().getExercises().iterator().next();
 
         boolean isAllowed = assessmentService.isAllowedToCreateOrOverrideResult(null, exercise, null, null, false);
         assertThat(isAllowed).isFalse();
@@ -342,7 +338,7 @@ class AssessmentServiceTest extends AbstractSpringIntegrationIndependentTest {
 
         Exam exam = examUtilService.addExam(course1, visibleDate, startDate, endDate, publishResultDate);
         exam = examUtilService.addTextModelingProgrammingExercisesToExam(exam, false, false);
-        var exercise = exam.getExerciseGroups().get(0).getExercises().iterator().next();
+        var exercise = exam.getExerciseGroups().getFirst().getExercises().iterator().next();
 
         boolean isAllowed = assessmentService.isAllowedToCreateOrOverrideResult(null, exercise, null, null, false);
         assertThat(isAllowed).isFalse();
